# magsims

./: CMakeLists.txt  LICENSE.md  README.md  WARP.md
apps/: aligned_spin.cpp  aligned_spin.cpp_backup  flatley_trial.cpp  flatley_trial.cpp_backup  main.cpp
data/csv/: position-eci_251001-1y-10s.csv
include/: DateTime.h  Debug.h  Flatley.h  Matrix.h  Numerics.h  Satellite.h  Shell.h  Simulation.h  Vector.h
references/: coeff_log.csv
results/: shared_data_satellite_info.txt
src/: DateTime.cpp  Flatley.cpp  Matrix.cpp  Numerics.cpp  Satellite.cpp  Shell.cpp  Simulation.cpp  Vector.cpp  debug.cpp
utils/: aux_fld_body.py  firstDerivative.py  nextIteration_solver.py  plot.py  plot_hyst_curve.py  plot_pkl.py
